--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tazmin Ahmed Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Tazmin Ahmed</span> World!</h1>
+            <h3>Build Web Site and Designing</h3>
+            <p>Hi! Myself Tazmin Ahmed... <br>
+                I am an student of CSE department at BUBT... <br>
+                I love coding... I am a Web developer and Programmer living in Dhaka, Bangladesh</p>
+            <a class="linked-button" target="_blank" href="https://www.linkedin.com/in/md-tazmin-ahmed-7a43291a0/">Hire
+                Me</a>
+        </div>
+
+        <div class="half-width">
+            <img src="images/tazmin-with-bg.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
