--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1>Experiences</h1>
 
         <div class="flexible-container">
-            <div class="experience-item">
+            <div id="web-dev-experience" class="experience-item">
                 <h1>Full Stack Web Developer</h1>
                 <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
@@ -60,7 +60,7 @@
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
 
-            <div class="experience-item">
+            <div id="baby-web-experience" class="experience-item">
                 <h1>Baby Web Developer</h1>
                 <h3 class="orange-color">2021-2022 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
@@ -69,6 +69,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
