--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1><span class="orange-color">Tazmin Ahmed</span> World!</h1>
             <h3>Build Web Site and Designing</h3>
             <p>Hi! Myself Tazmin Ahmed... <br>
-                I am an student of CSE department at BUBT... <br>
+                I am a student of CSE department at BUBT... <br>
                 I love coding... I am a Web developer and Programmer living in Dhaka, Bangladesh</p>
             <a class="linked-button" target="_blank" href="https://www.linkedin.com/in/md-tazmin-ahmed-7a43291a0/">Hire
                 Me</a>
