--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </section>
     <footer>
-        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+        <p>© Md.Tazmin Ahmed 2022, a Programming Hero initiative.</p>
     </footer>
 </body>
 
